2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/dialog.rb: Remove Gtk.init.

2006-01-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgpui.c (Gnome::PrintUI::BINDING_VERSION): added.
	* src/rbgpui.h (RBGPUI_{MAJOR,MINOR,MICRO}_VERSION): added.

2005-10-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fixed compiling error when Ruby/GTK2 is not installed.

2005-10-10  Kouhei Sutou  <kou@cozmixng.org>

	* src: Fixed indentation.

	* extconf.rb: Use make_version_header.

	* src: Revised copyright information.

2005-10-04  Kouhei Sutou  <kou@cozmixng.org>

	* src: Use RBGTK_INITIALIZE instead of G_INITIALIZE.

	* src/rbgpui-font-dialog.c (gpui_fp_set_phrase): Fix compiling
	  warning.

2005-10-03  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: Generate rbgpui-version.h

	* src/rbgpui.h: Moved Init_*() to ...
	* src/rbgpui.c: ... here.

	* src/rbgpui.c (Gnome::PrintUI::BUILD_VERSION): Added.

	* src/rbgpui-print-content-selector.c: Added.
	* src/rbgpui-font-dialog.c: Added.

2005-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgpui-print-job-preview.c: Fix compiling warning. 
	* src/rbgpui-print-dialog.c: ditto. 

2005-07-24  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb (mkenums_h): renamed prefix to GNOME_TYPE_PRINT_ from
	  GNOME_TYPE_PRINTUI_.
	* src/rbgpui-print-dialog.c: ditto.
	* src/rbgpui-print-paper-selector.c: ditto.
	* src/libgnomeprintui-enum-types.c.maintainer: ditto.
	* src/libgnomeprintui-enum-types.h.maintainer: ditto.

2005-07-18  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: check system has
	  libgnomeprintui/gnome-print-config-dialog.h header or not.

	* src/rbgpui-print-config-dialog.c: disable if system doesn't have
	  libgnomeprintui/gnome-print-config-dialog.h header.

2005-06-12  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb (mkenums): kept $makefile_created value.

	* extconf.rb: fixed enum types handling.
	* src/rbgpui-print-dialog.c: ditto.
	* src/rbgpui-print-paper-selector.c: ditto.
