@@ -1,3 +1,7 @@
+2006-12-05  Kouhei Sutou  <kou@cozmixng.org>
+
+	* extconf.rb: used glib_mkenums.
+
 2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* sample/dialog.rb: Remove Gtk.init.
